@@ -4,7 +4,7 @@
   rbgtkconst.c -
 
   $Author: mutoh $
-  $Date: 2003/08/31 15:29:44 $
+  $Date: 2003/11/08 19:18:24 $
 
   Copyright (C) 2002,2003 Ruby-GNOME2 Project Team
   Copyright (C) 1998-2000 Yukihiro Matsumoto,
@@ -15,7 +15,7 @@
 #include "global.h"
 
 #define RBGTK_MAJOR_VERSION 0
-#define RBGTK_MINOR_VERSION 7
+#define RBGTK_MINOR_VERSION 8
 #define RBGTK_MICRO_VERSION 0
 
 /*
